--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "cheerio": "^0.20.0",
     "express": "^4.14.0",
     "superagent": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.1.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.3"
   }
 }
